*                          Database Drivers                                *
****************************************************************************

sqlite
------
* QVariant::Bool type now mapped to integers 0/1 in SQL instead of strings
'true' and 'false'. Sqlite does not have a boolean column type and it is
customary to use integer. QTBUG-23895

****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------


Qt for Windows
--------------
* Accessibility framework uses IAccessible2
* ANGLE can be used to provide Open GL ES 2.0 (see http://code.google.com/p/angleproject/)

Qt for Mac OS X
---------------


Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************

- Build System

  * Remove qttest_p4.prf file. From now on we should explicitly enable the
    things from it which we want. Autotest .pro files should stop using
    'load(qttest_p4)' and start using 'CONFIG+=testcase' instead.

- Assistant

- Designer
  * [QTBUG-8926] [QTBUG-20440] Properties of type QStringList now have
    translation attributes which apply to all items.
    They are by default translatable.

- Linguist

- rcc


- moc

* [QTBUG-20785] The moc now has a -b<file> option to #include an additional
  file at the beginning of the generated file.


- uic


- uic3


- qmake
